--- a/packages/insight/src/components/head-nav/head-nav.html
+++ b/packages/insight/src/components/head-nav/head-nav.html
@@ -13,6 +13,7 @@
         <ion-icon name="logo-bitcoin" *ngIf="(chainNetwork.chain === 'BTC' || chainNetwork.chain === 'BCH') && currencyProvider?.currencySymbol !== 'USD'"></ion-icon>
         <ion-icon name="logo-usd" *ngIf="currencyProvider?.currencySymbol === 'USD'"></ion-icon>
         <img class="eth-icon" src="assets/img/ethicon.svg" *ngIf="chainNetwork.chain === 'ETH' && currencyProvider?.currencySymbol !== 'USD'" width="12">
+        <img class="ppc-icon" src="assets/img/ppcicon.svg" *ngIf="chainNetwork.chain === 'PPC' && currencyProvider?.currencySymbol !== 'USD'" width="12">
         &nbsp;
         {{ currencyProvider?.currencySymbol }}
         &nbsp;
