--- a/packages/insight/src/components/transaction-details/transaction-details.html
+++ b/packages/insight/src/components/transaction-details/transaction-details.html
@@ -122,14 +122,14 @@
             </div>
             <div *ngIf="expanded">
               <p>
-                <b>Script Template</b>
-                <i>{{ vout.script.type }}</i>
+               <!-- <b>Script Template</b>
+                <i>{{ vout.script }}</i> <!-->
               </p>
               <p>
                 <b>Locking Script</b>
               </p>
               <div class="locking-script">
-                <p>{{ vout.script.asm }}</p>
+                <p>{{ vout.script }}</p>
               </div>
             </div>
           </div>
